# shlink-py

./: .gitignore  pyproject.toml
shlink/client/: client.py  const.py  error.py
shlink/client/http/: domain.py  health.py  integration.py  short_urls.py  tags.py  visits.py
shlink/client/utils/: converters.py  mixins.py  serializer.py
shlink/models/: __init__.py  domain.py  integration.py  short.py  status.py  tag.py  visits.py
tests/: test_shlink_py.py
