[tool.poetry]
name = "shlink-py"
version = "1.0.0"
description = ""
authors = ["zevaryx <zevaryx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
